# murmurhash3-rs

./: Cargo.toml
benches/: bench.rs
src/: lib.rs  mmh3_128.rs
