[package]

name = "murmurhash3"
version = "1.0.0"
authors = ["mhallin <mhallin@gmail.com>", "mhseiden <140dbs@gmail.com>"]
description = "MurmurHash3 implementation"
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/mhseiden/murmurhash3-rs"

[lib]
name = "murmurhash3"
path = "src/lib.rs"

[dev-dependencies]
rand = "*"
